# doc/swagger.json
@@ -1,5 +1,248 @@
 {
   "swagger": "2.0",
-  "paths": {},
-  "definitions": {}
+  "info": {
+    "description": "User Management and Authentication API",
+    "title": "Virtual Security Module"
+  },
+  "basePath": "/",
+  "paths": {
+    "/login": {
+      "post": {
+        "description": "First phase: client provides the username and gets back a challenge,\ndecrypted by the user's public key\nSecond phase: client decrypts the challenge with the user's private\nkey and provides it with the request; and gets a token",
+        "tags": [
+          "users"
+        ],
+        "summary": "Log-in. Expected to be invoked twice by a client:",
+        "operationId": "Login",
+        "parameters": [
+          {
+            "name": "LoginReq",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/LoginRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/LoginResp"
+          }
+        }
+      }
+    },
+    "/secrets": {
+      "post": {
+        "description": "Creates a new secret",
+        "tags": [
+          "secrets"
+        ],
+        "operationId": "CreateSecret",
+        "parameters": [
+          {
+            "name": "SecretEntry",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/SecretEntry"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/responses/SecretCreationResponse"
+          }
+        }
+      }
+    },
+    "/secrets/{id}": {
+      "get": {
+        "description": "Retrieves a secret",
+        "tags": [
+          "secrets"
+        ],
+        "operationId": "GetSecret",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/SecretEntryResponse"
+          }
+        }
+      },
+      "delete": {
+        "description": "Deletes a secret",
+        "tags": [
+          "secrets"
+        ],
+        "operationId": "DeleteSecret",
+        "responses": {}
+      }
+    },
+    "/users": {
+      "post": {
+        "description": "Creates a new user",
+        "tags": [
+          "users"
+        ],
+        "operationId": "CreateUser",
+        "parameters": [
+          {
+            "name": "UserEntry",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/UserEntry"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/responses/UserCreationResponse"
+          }
+        }
+      }
+    },
+    "/users/{username}": {
+      "get": {
+        "description": "Returns a user's info",
+        "tags": [
+          "users"
+        ],
+        "operationId": "GetUser",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/UserEntryResponse"
+          }
+        }
+      },
+      "delete": {
+        "description": "Deletes a user",
+        "tags": [
+          "users"
+        ],
+        "operationId": "DeleteUser",
+        "responses": {}
+      }
+    }
+  },
+  "definitions": {
+    "LoginRequest": {
+      "type": "object",
+      "properties": {
+        "challenge": {
+          "type": "string",
+          "x-go-name": "Challenge"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-package": "github.com/vmware/virtual-security-module/model"
+    },
+    "LoginResponse": {
+      "type": "object",
+      "properties": {
+        "challengeOrToken": {
+          "type": "string",
+          "x-go-name": "ChallengeOrToken"
+        }
+      },
+      "x-go-package": "github.com/vmware/virtual-security-module/model"
+    },
+    "SecretEntry": {
+      "type": "object",
+      "properties": {
+        "authorizationPolicyIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "AuthorizationPolicyIds"
+        },
+        "expirationTime": {
+          "x-go-name": "ExpirationTime"
+        },
+        "id": {
+          "type": "string",
+          "x-go-name": "Id"
+        },
+        "namespaceEntryId": {
+          "type": "string",
+          "x-go-name": "NamespaceEntryId"
+        },
+        "ownerEntryId": {
+          "type": "string",
+          "x-go-name": "OwnerEntryId"
+        },
+        "secretData": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "uint8"
+          },
+          "x-go-name": "SecretData"
+        }
+      },
+      "x-go-package": "github.com/vmware/virtual-security-module/model"
+    },
+    "UserEntry": {
+      "type": "object",
+      "properties": {
+        "credentials": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "uint8"
+          },
+          "x-go-name": "Credentials"
+        },
+        "roleEntryIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "RoleEntryIds"
+        },
+        "username": {
+          "type": "string",
+          "x-go-name": "Username"
+        }
+      },
+      "x-go-package": "github.com/vmware/virtual-security-module/model"
+    }
+  },
+  "responses": {
+    "LoginResp": {
+      "schema": {
+        "$ref": "#/definitions/LoginResponse"
+      }
+    },
+    "SecretCreationResponse": {
+      "schema": {
+        "type": "object",
+        "properties": {
+          "SecretId": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "SecretEntryResponse": {
+      "schema": {
+        "$ref": "#/definitions/SecretEntry"
+      }
+    },
+    "UserCreationResponse": {
+      "schema": {
+        "type": "object",
+        "properties": {
+          "UserId": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "UserEntryResponse": {
+      "schema": {
+        "$ref": "#/definitions/UserEntry"
+      }
+    }
+  }
 }
